--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,17 @@
+:root {
+    font: 15px Helvetica, Arial, sans-serif;
+    --primary-background: #DAA520;
+    --secondary-background: white;
+    --text-con: white;
+    --text-norm: black;
+    min-height: 100vh;
+}
+
 footer a img {
     width: 50px;
     height: 50px;
+}
+
+header, footer {
+    background: var(--primary-background)
 }
